@@ -3,5 +3,6 @@
 - final CF images produce by Cajun, Prefuse, GraphStream frameworks
 == 1.1 ver. Cognitive Frame Visualizer =====
 - refactoring cftools
+- add getAnonymousIndividuals() to wrappers Subaxiom and Axiom
 
 
